--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -204,6 +204,8 @@
   <div class="header">
     <button id="openFile">ファイルを開く</button>
     <button id="saveFile">ファイルを保存</button>
+    <button id="kanjiButton">漢字</button>
+    <button id="furiganaButton">ふりがな</button>
     <button id="settingsButton">API Key設定</button>
   </div>
 
