--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -206,6 +206,7 @@
     <button id="saveFile">ファイルを保存</button>
     <button id="kanjiButton">漢字</button>
     <button id="furiganaButton">ふりがな</button>
+    <button id="brConvertButton">改行変換</button>
     <button id="settingsButton">API Key設定</button>
   </div>
 
