--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -186,17 +186,21 @@
   </style>
 </head>
 <body>
-  <!-- API Key設定モーダル -->
-  <div id="apiKeyModal" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 1000; align-items: center; justify-content: center;">
+  <!-- 設定モーダル -->
+  <div id="settingsModal" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 1000; align-items: center; justify-content: center;">
     <div style="background: #2d2d2d; padding: 30px; border-radius: 8px; max-width: 500px; width: 90%;">
-      <h2 style="margin-top: 0; color: #fff;">OpenAI API Key設定</h2>
-      <p style="color: #ccc; font-size: 14px; margin-bottom: 20px;">
-        OpenAI API Keyを入力してください。API Keyは安全に保存されます。
-      </p>
-      <input type="password" id="apiKeyInput" placeholder="sk-..." style="width: 100%; padding: 12px; background: #3c3c3c; border: 1px solid #555; color: #fff; border-radius: 4px; font-size: 14px; margin-bottom: 20px;">
+      <h2 style="margin-top: 0; color: #fff;">設定</h2>
+
+      <!-- API Key設定 -->
+      <div style="margin-bottom: 24px;">
+        <label style="display: block; color: #ccc; font-size: 14px; margin-bottom: 8px;">OpenAI API Key</label>
+        <input type="password" id="apiKeyInput" placeholder="sk-..." style="width: 100%; padding: 12px; background: #3c3c3c; border: 1px solid #555; color: #fff; border-radius: 4px; font-size: 14px;">
+      </div>
+
+
       <div style="display: flex; gap: 10px; justify-content: flex-end;">
-        <button id="cancelApiKey" style="background: #555;">キャンセル</button>
-        <button id="saveApiKey">保存</button>
+        <button id="cancelSettings" style="background: #555;">キャンセル</button>
+        <button id="saveSettings">保存</button>
       </div>
     </div>
   </div>
@@ -207,7 +211,9 @@
     <button id="kanjiButton">漢字</button>
     <button id="furiganaButton">ふりがな</button>
     <button id="brConvertButton">改行変換</button>
-    <button id="settingsButton">API Key設定</button>
+    <button id="rubyConvertButton">ルビ変換</button>
+    <button id="hiraganaButton">ひらがな変換</button>
+    <button id="settingsButton">設定</button>
   </div>
 
   <div class="container">
