--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -208,9 +208,9 @@
   <div class="header">
     <button id="openFile">ファイルを開く</button>
     <button id="saveFile">ファイルを保存</button>
+    <button id="mainTextButton">main_text抽出</button>
     <button id="kanjiButton">漢字</button>
     <button id="furiganaButton">ふりがな</button>
-    <button id="brConvertButton">改行変換</button>
     <button id="rubyConvertButton">ルビ変換</button>
     <button id="hiraganaButton">ひらがな変換</button>
     <button id="settingsButton">設定</button>
@@ -241,6 +241,7 @@
       </div>
 
       <div class="section">
+        <button id="playButton" class="convert-button">▶ 選択範囲を再生</button>
         <button id="convertButton" class="convert-button">選択範囲を音声に変換</button>
         <button id="cancelButton" class="convert-button cancel-button" style="display: none;">キャンセル</button>
 
