--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -211,6 +211,7 @@
     <button id="mainTextButton">main_text抽出</button>
     <button id="kanjiButton">漢字</button>
     <button id="furiganaButton">ふりがな</button>
+    <button id="brConvertButton">改行変換</button>
     <button id="rubyConvertButton">ルビ変換</button>
     <button id="hiraganaButton">ひらがな変換</button>
     <button id="settingsButton">設定</button>
