--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -183,9 +183,68 @@
       width: 100%;
       height: 32px;
     }
+
+    .status-bar {
+      background: #252526;
+      border-top: 1px solid #3c3c3c;
+      padding: 8px 20px;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      font-size: 12px;
+      color: #888;
+      gap: 20px;
+    }
+
+    .usage-stat {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    .usage-stat strong {
+      color: #d4d4d4;
+    }
   </style>
 </head>
 <body>
+  <!-- 検索・置換モーダル -->
+  <div id="searchReplaceModal" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 1000; align-items: center; justify-content: center;">
+    <div style="background: #2d2d2d; padding: 30px; border-radius: 8px; max-width: 500px; width: 90%;">
+      <h2 style="margin-top: 0; color: #fff;">検索・置換</h2>
+
+      <div style="margin-bottom: 16px;">
+        <label style="display: block; color: #ccc; font-size: 14px; margin-bottom: 8px;">検索</label>
+        <input type="text" id="searchInput" placeholder="検索文字列" style="width: 100%; padding: 12px; background: #3c3c3c; border: 1px solid #555; color: #fff; border-radius: 4px; font-size: 14px;">
+      </div>
+
+      <div style="margin-bottom: 16px;">
+        <label style="display: block; color: #ccc; font-size: 14px; margin-bottom: 8px;">置換</label>
+        <input type="text" id="replaceInput" placeholder="置換文字列" style="width: 100%; padding: 12px; background: #3c3c3c; border: 1px solid #555; color: #fff; border-radius: 4px; font-size: 14px;">
+      </div>
+
+      <div style="margin-bottom: 24px;">
+        <label style="display: flex; align-items: center; color: #ccc; font-size: 14px; gap: 8px; cursor: pointer;">
+          <input type="checkbox" id="caseSensitiveCheck" style="cursor: pointer;">
+          <span>大文字・小文字を区別</span>
+        </label>
+        <label style="display: flex; align-items: center; color: #ccc; font-size: 14px; gap: 8px; cursor: pointer; margin-top: 8px;">
+          <input type="checkbox" id="regexCheck" style="cursor: pointer;">
+          <span>正規表現を使用</span>
+        </label>
+      </div>
+
+      <div style="display: flex; gap: 10px; justify-content: flex-end; flex-wrap: wrap;">
+        <button id="findNextButton">次を検索</button>
+        <button id="replaceButton">置換</button>
+        <button id="replaceAllButton">すべて置換</button>
+        <button id="closeSearchButton" style="background: #555;">閉じる</button>
+      </div>
+
+      <div id="searchStatus" style="margin-top: 16px; padding: 8px; background: #1a3d1a; color: #75ff75; border-radius: 4px; font-size: 12px; display: none;"></div>
+    </div>
+  </div>
+
   <!-- 設定モーダル -->
   <div id="settingsModal" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 1000; align-items: center; justify-content: center;">
     <div style="background: #2d2d2d; padding: 30px; border-radius: 8px; max-width: 500px; width: 90%;">
@@ -258,6 +317,18 @@
         <h3>音声再生</h3>
         <div id="audioFiles"></div>
       </div>
+    </div>
+  </div>
+
+  <div class="status-bar">
+    <div class="usage-stat">
+      <span>セッション合計:</span>
+      <strong id="sessionChars">0</strong>
+      <span>文字</span>
+    </div>
+    <div class="usage-stat">
+      <span>推定コスト:</span>
+      <strong id="sessionCost">$0.0000</strong>
     </div>
   </div>
 
