--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -266,7 +266,8 @@
 
   <div class="header">
     <button id="openFile">ファイルを開く</button>
-    <button id="saveFile">ファイルを保存</button>
+    <button id="saveFile">Save</button>
+    <button id="saveAsFile">Save As...</button>
     <button id="mainTextButton">main_text抽出</button>
     <button id="kanjiButton">漢字</button>
     <button id="furiganaButton">ふりがな</button>
