--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -233,6 +233,151 @@
     .usage-stat strong {
       color: #d4d4d4;
     }
+
+    /* Dictionary Panel Styles */
+    .dictionary-panel {
+      width: 350px;
+      background: #252526;
+      border-left: 1px solid #3c3c3c;
+      padding: 20px;
+      overflow-y: auto;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .dictionary-header {
+      margin-bottom: 16px;
+      display: flex;
+      gap: 8px;
+    }
+
+    .dictionary-header button {
+      flex: 1;
+      padding: 8px 12px;
+      font-size: 12px;
+    }
+
+    .dictionary-entries {
+      flex: 1;
+      overflow-y: auto;
+      margin-bottom: 16px;
+    }
+
+    .dictionary-entry {
+      background: #2d2d2d;
+      border: 1px solid #3c3c3c;
+      border-radius: 4px;
+      padding: 12px;
+      margin-bottom: 8px;
+    }
+
+    .dictionary-entry.editing {
+      background: #3c3c3c;
+    }
+
+    .entry-display {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+      gap: 12px;
+    }
+
+    .entry-text {
+      flex: 1;
+      font-size: 13px;
+      line-height: 1.5;
+      word-break: break-word;
+    }
+
+    .entry-from {
+      color: #d4d4d4;
+    }
+
+    .entry-arrow {
+      color: #888;
+      margin: 0 4px;
+    }
+
+    .entry-to {
+      color: #4ec9b0;
+    }
+
+    .entry-actions {
+      display: flex;
+      gap: 4px;
+      flex-shrink: 0;
+    }
+
+    .entry-actions button {
+      padding: 4px 8px;
+      font-size: 11px;
+      min-width: auto;
+    }
+
+    .entry-edit-form {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+    }
+
+    .entry-edit-form input {
+      width: 100%;
+      padding: 8px;
+      background: #1e1e1e;
+      border: 1px solid #555;
+      color: #d4d4d4;
+      border-radius: 4px;
+      font-size: 13px;
+    }
+
+    .entry-edit-actions {
+      display: flex;
+      gap: 4px;
+    }
+
+    .entry-edit-actions button {
+      flex: 1;
+      padding: 6px 12px;
+      font-size: 12px;
+    }
+
+    .dictionary-add {
+      background: #2d2d2d;
+      border: 1px solid #3c3c3c;
+      border-radius: 4px;
+      padding: 12px;
+      margin-bottom: 16px;
+    }
+
+    .dictionary-add input {
+      width: 100%;
+      padding: 8px;
+      background: #1e1e1e;
+      border: 1px solid #555;
+      color: #d4d4d4;
+      border-radius: 4px;
+      font-size: 13px;
+      margin-bottom: 8px;
+    }
+
+    .dictionary-apply {
+      width: 100%;
+      padding: 12px;
+      font-size: 15px;
+      font-weight: 500;
+      background: #0e639c;
+    }
+
+    .dictionary-apply:hover {
+      background: #1177bb;
+    }
+
+    .dictionary-empty {
+      text-align: center;
+      color: #888;
+      padding: 40px 20px;
+      font-size: 13px;
+    }
   </style>
 </head>
 <body>
@@ -309,7 +454,12 @@
 
     <div class="sidebar">
       <div class="section">
-        <h3>音声設定</h3>
+        <h3 style="font-size: 24px;margin-bottom: 16px; color: #cccccc;">プロジェクト設定</h3>
+        <div style="display: flex; gap: 8px; margin-bottom: 16px;">
+          <button id="loadProjectButton" style="flex: 1; font-size: 12px;">読込</button>
+          <button id="saveProjectButton" style="flex: 1; font-size: 12px;">保存</button>
+        </div>
+
         <label>Voice</label>
         <select id="voiceSelect">
           <option value="alloy">Alloy</option>
@@ -342,6 +492,31 @@
         <h3>生成された音声（一時）</h3>
         <div id="audioFiles"></div>
       </div>
+    </div>
+
+    <!-- Dictionary Panel -->
+    <div class="dictionary-panel">
+      <h3 style="font-size: 20px; margin-bottom: 16px; color: #cccccc;">📖 辞書</h3>
+
+      <div class="dictionary-add" id="addEntryForm" style="display: none;">
+        <input type="text" id="newEntryFrom" placeholder="元の文字列">
+        <input type="text" id="newEntryTo" placeholder="置換後の文字列">
+        <div style="display: flex; gap: 4px;">
+          <button id="confirmAddButton" style="flex: 1; font-size: 12px;">追加</button>
+          <button id="cancelAddButton" style="flex: 1; font-size: 12px; background: #555;">キャンセル</button>
+        </div>
+      </div>
+
+      <div class="dictionary-entries" id="dictionaryEntries">
+        <div class="dictionary-empty">
+          辞書が空です<br>
+          「+ 新規追加」または「読込」から始めましょう
+        </div>
+      </div>
+
+      <button id="addEntryButton" style="width: 100%; margin-bottom: 16px; font-size: 13px;">+ 新規追加</button>
+      <button id="applyDictionaryButton" class="dictionary-apply">🔄 辞書適用</button>
+      <div id="dictionaryStatus" class="status" style="display: none; margin-top: 12px;"></div>
     </div>
   </div>
 
