--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -4,7 +4,63 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Narration Editor</title>
+  <!-- Google Fonts - Roboto -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <style>
+    /* ================================
+       Material Design CSS Variables
+       ================================ */
+    :root {
+      /* Material Dark Theme Colors */
+      --md-primary: #1976D2;
+      --md-primary-hover: #1565C0;
+      --md-primary-light: #42A5F5;
+      --md-secondary: #424242;
+      --md-error: #CF6679;
+
+      /* Surface Colors */
+      --md-surface-0: #121212;
+      --md-surface-1: #1E1E1E;
+      --md-surface-2: #232323;
+      --md-surface-3: #252526;
+      --md-surface-4: #272727;
+      --md-surface-6: #2C2C2C;
+      --md-surface-8: #2D2D2D;
+      --md-surface-12: #323232;
+      --md-surface-16: #353535;
+
+      /* Text Colors */
+      --md-text-primary: rgba(255, 255, 255, 0.87);
+      --md-text-secondary: rgba(255, 255, 255, 0.60);
+      --md-text-disabled: rgba(255, 255, 255, 0.38);
+
+      /* Divider */
+      --md-divider: rgba(255, 255, 255, 0.12);
+
+      /* Elevation (Shadows) */
+      --md-elevation-0: none;
+      --md-elevation-1: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);
+      --md-elevation-2: 0px 3px 1px -2px rgba(0,0,0,0.2), 0px 2px 2px 0px rgba(0,0,0,0.14), 0px 1px 5px 0px rgba(0,0,0,0.12);
+      --md-elevation-3: 0px 3px 3px -2px rgba(0,0,0,0.2), 0px 3px 4px 0px rgba(0,0,0,0.14), 0px 1px 8px 0px rgba(0,0,0,0.12);
+      --md-elevation-4: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);
+      --md-elevation-6: 0px 3px 5px -1px rgba(0,0,0,0.2), 0px 6px 10px 0px rgba(0,0,0,0.14), 0px 1px 18px 0px rgba(0,0,0,0.12);
+      --md-elevation-8: 0px 5px 5px -3px rgba(0,0,0,0.2), 0px 8px 10px 1px rgba(0,0,0,0.14), 0px 3px 14px 2px rgba(0,0,0,0.12);
+      --md-elevation-12: 0px 7px 8px -4px rgba(0,0,0,0.2), 0px 12px 17px 2px rgba(0,0,0,0.14), 0px 5px 22px 4px rgba(0,0,0,0.12);
+      --md-elevation-16: 0px 8px 10px -5px rgba(0,0,0,0.2), 0px 16px 24px 2px rgba(0,0,0,0.14), 0px 6px 30px 5px rgba(0,0,0,0.12);
+      --md-elevation-24: 0px 11px 15px -7px rgba(0,0,0,0.2), 0px 24px 38px 3px rgba(0,0,0,0.14), 0px 9px 46px 8px rgba(0,0,0,0.12);
+
+      /* Border Radius */
+      --md-shape-small: 4px;
+      --md-shape-medium: 8px;
+      --md-shape-large: 16px;
+
+      /* Typography */
+      --md-font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+      --md-font-mono: 'Monaco', 'Courier New', monospace;
+    }
+
     * {
       margin: 0;
       padding: 0;
@@ -12,39 +68,57 @@
     }
 
     body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-      background: #1e1e1e;
-      color: #d4d4d4;
+      font-family: var(--md-font-family);
+      background: var(--md-surface-1);
+      color: var(--md-text-primary);
       height: 100vh;
       display: flex;
       flex-direction: column;
     }
 
+    /* Header - Material App Bar */
     .header {
-      background: #252526;
-      padding: 10px 20px;
-      border-bottom: 1px solid #3c3c3c;
+      background: var(--md-surface-3);
+      padding: 12px 20px;
+      border-bottom: 1px solid var(--md-divider);
       display: flex;
-      gap: 10px;
+      gap: 8px;
+      box-shadow: var(--md-elevation-4);
     }
 
+    /* Buttons - Material Raised Button */
     button {
-      background: #0e639c;
+      background: var(--md-primary);
       color: white;
       border: none;
       padding: 8px 16px;
-      border-radius: 4px;
+      border-radius: var(--md-shape-small);
       cursor: pointer;
       font-size: 14px;
+      font-weight: 500;
+      font-family: var(--md-font-family);
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
+      box-shadow: var(--md-elevation-2);
+      transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+      position: relative;
+      overflow: hidden;
     }
 
     button:hover {
-      background: #1177bb;
+      background: var(--md-primary-hover);
+      box-shadow: var(--md-elevation-4);
+    }
+
+    button:active {
+      box-shadow: var(--md-elevation-8);
     }
 
     button:disabled {
-      background: #3c3c3c;
+      background: rgba(255, 255, 255, 0.12);
+      color: var(--md-text-disabled);
       cursor: not-allowed;
+      box-shadow: none;
     }
 
     .container {
@@ -62,23 +136,26 @@
 
     textarea {
       flex: 1;
-      background: #1e1e1e;
-      color: #d4d4d4;
-      border: 1px solid #3c3c3c;
+      background: var(--md-surface-1);
+      color: var(--md-text-primary);
+      border: 1px solid var(--md-divider);
       padding: 16px;
-      font-family: 'Monaco', 'Courier New', monospace;
+      font-family: var(--md-font-mono);
       font-size: 14px;
       line-height: 1.6;
       resize: none;
       outline: none;
+      border-radius: var(--md-shape-small);
     }
 
+    /* Sidebar - Material Surface */
     .sidebar {
       width: 350px;
-      background: #252526;
-      border-left: 1px solid #3c3c3c;
+      background: var(--md-surface-3);
+      border-left: 1px solid var(--md-divider);
       padding: 20px;
       overflow-y: auto;
+      box-shadow: var(--md-elevation-2);
     }
 
     .section {
@@ -98,19 +175,33 @@
       color: #cccccc;
     }
 
+    /* Material Input Fields */
     select, textarea.instructions {
       width: 100%;
-      background: #3c3c3c;
-      color: #d4d4d4;
-      border: 1px solid #555;
-      padding: 8px;
-      border-radius: 4px;
-      font-size: 13px;
+      background: var(--md-surface-8);
+      color: var(--md-text-primary);
+      border: 1px solid var(--md-divider);
+      padding: 12px;
+      border-radius: var(--md-shape-small);
+      font-size: 14px;
+      font-family: var(--md-font-family);
+      transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+      outline: none;
+    }
+
+    select:hover, textarea.instructions:hover {
+      border-color: var(--md-text-secondary);
+      background: var(--md-surface-12);
+    }
+
+    select:focus, textarea.instructions:focus {
+      border-color: var(--md-primary);
+      background: var(--md-surface-12);
+      box-shadow: 0 0 0 1px var(--md-primary);
     }
 
     textarea.instructions {
       height: 120px;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
       resize: vertical;
     }
 
@@ -147,30 +238,39 @@
       background: #e03e3e;
     }
 
+    /* Material Cards */
     .status {
       margin-top: 16px;
       padding: 12px;
-      background: #2d2d2d;
-      border-radius: 4px;
+      background: var(--md-surface-8);
+      border-radius: var(--md-shape-small);
       font-size: 12px;
       line-height: 1.5;
+      box-shadow: var(--md-elevation-1);
     }
 
     .status.success {
-      background: #1a3d1a;
-      color: #75ff75;
+      background: #1B5E20;
+      color: #A5D6A7;
     }
 
     .status.error {
-      background: #3d1a1a;
-      color: #ff7575;
+      background: #B71C1C;
+      color: #EF9A9A;
     }
 
+    /* Audio File Cards */
     .audio-file {
       margin-bottom: 12px;
       padding: 12px;
-      background: #2d2d2d;
-      border-radius: 4px;
+      background: var(--md-surface-8);
+      border-radius: var(--md-shape-small);
+      box-shadow: var(--md-elevation-2);
+      transition: box-shadow 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .audio-file:hover {
+      box-shadow: var(--md-elevation-4);
     }
 
     .audio-file-name {
@@ -212,16 +312,18 @@
       height: 32px;
     }
 
+    /* Material Status Bar */
     .status-bar {
-      background: #252526;
-      border-top: 1px solid #3c3c3c;
+      background: var(--md-surface-3);
+      border-top: 1px solid var(--md-divider);
       padding: 8px 20px;
       display: flex;
       justify-content: flex-end;
       align-items: center;
       font-size: 12px;
-      color: #888;
+      color: var(--md-text-secondary);
       gap: 20px;
+      box-shadow: var(--md-elevation-4);
     }
 
     .usage-stat {
@@ -231,7 +333,8 @@
     }
 
     .usage-stat strong {
-      color: #d4d4d4;
+      color: var(--md-text-primary);
+      font-weight: 500;
     }
 
     /* Dictionary Panel Styles */
@@ -263,16 +366,24 @@
       margin-bottom: 16px;
     }
 
+    /* Dictionary Entry Cards */
     .dictionary-entry {
-      background: #2d2d2d;
-      border: 1px solid #3c3c3c;
-      border-radius: 4px;
+      background: var(--md-surface-8);
+      border: 1px solid var(--md-divider);
+      border-radius: var(--md-shape-small);
       padding: 12px;
       margin-bottom: 8px;
+      box-shadow: var(--md-elevation-1);
+      transition: box-shadow 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .dictionary-entry:hover {
+      box-shadow: var(--md-elevation-2);
     }
 
     .dictionary-entry.editing {
-      background: #3c3c3c;
+      background: var(--md-surface-12);
+      box-shadow: var(--md-elevation-3);
     }
 
     .entry-display {
@@ -341,23 +452,38 @@
       font-size: 12px;
     }
 
+    /* Dictionary Add Form Card */
     .dictionary-add {
-      background: #2d2d2d;
-      border: 1px solid #3c3c3c;
-      border-radius: 4px;
+      background: var(--md-surface-8);
+      border: 1px solid var(--md-divider);
+      border-radius: var(--md-shape-small);
       padding: 12px;
       margin-bottom: 16px;
+      box-shadow: var(--md-elevation-2);
     }
 
     .dictionary-add input {
       width: 100%;
-      padding: 8px;
-      background: #1e1e1e;
-      border: 1px solid #555;
-      color: #d4d4d4;
-      border-radius: 4px;
-      font-size: 13px;
+      padding: 12px;
+      background: var(--md-surface-12);
+      border: 1px solid var(--md-divider);
+      color: var(--md-text-primary);
+      border-radius: var(--md-shape-small);
+      font-size: 14px;
+      font-family: var(--md-font-family);
       margin-bottom: 8px;
+      transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+      outline: none;
+    }
+
+    .dictionary-add input:hover {
+      border-color: var(--md-text-secondary);
+      background: var(--md-surface-16);
+    }
+
+    .dictionary-add input:focus {
+      border-color: var(--md-primary);
+      box-shadow: 0 0 0 1px var(--md-primary);
     }
 
     .dictionary-apply {
@@ -379,33 +505,37 @@
       font-size: 13px;
     }
 
-    /* Tab Styles */
+    /* Material Tabs */
     .tab-header {
       display: flex;
-      border-bottom: 1px solid #3c3c3c;
+      border-bottom: 1px solid var(--md-divider);
       margin-bottom: 16px;
     }
 
     .tab-button {
       flex: 1;
       background: transparent;
-      color: #888;
+      color: var(--md-text-secondary);
       border: none;
       border-bottom: 2px solid transparent;
-      padding: 12px 16px;
+      padding: 14px 16px;
       cursor: pointer;
       font-size: 14px;
-      transition: none;
+      font-weight: 500;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
+      transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+      box-shadow: none;
     }
 
     .tab-button:hover {
-      background: #2d2d2d;
-      color: #d4d4d4;
+      background: rgba(255, 255, 255, 0.04);
+      color: var(--md-text-primary);
     }
 
     .tab-button.active {
-      color: #fff;
-      border-bottom-color: #0e639c;
+      color: var(--md-primary);
+      border-bottom-color: var(--md-primary);
       background: transparent;
     }
 
@@ -416,22 +546,84 @@
     .tab-content.active {
       display: block;
     }
+
+    /* Material Dialog/Modal */
+    .modal-overlay {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.6);
+      z-index: 1000;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .modal-dialog {
+      background: var(--md-surface-8);
+      padding: 24px;
+      border-radius: var(--md-shape-medium);
+      max-width: 500px;
+      width: 90%;
+      box-shadow: var(--md-elevation-24);
+    }
+
+    .modal-dialog h2 {
+      margin-top: 0;
+      margin-bottom: 20px;
+      color: var(--md-text-primary);
+      font-size: 20px;
+      font-weight: 500;
+    }
+
+    .modal-input {
+      width: 100%;
+      padding: 12px;
+      background: var(--md-surface-12);
+      border: 1px solid var(--md-divider);
+      color: var(--md-text-primary);
+      border-radius: var(--md-shape-small);
+      font-size: 14px;
+      font-family: var(--md-font-family);
+      transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+      outline: none;
+    }
+
+    .modal-input:hover {
+      border-color: var(--md-text-secondary);
+      background: var(--md-surface-16);
+    }
+
+    .modal-input:focus {
+      border-color: var(--md-primary);
+      box-shadow: 0 0 0 1px var(--md-primary);
+    }
+
+    .modal-label {
+      display: block;
+      color: var(--md-text-secondary);
+      font-size: 14px;
+      margin-bottom: 8px;
+      font-weight: 500;
+    }
   </style>
 </head>
 <body>
   <!-- 検索・置換モーダル -->
-  <div id="searchReplaceModal" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 1000; align-items: center; justify-content: center;">
-    <div style="background: #2d2d2d; padding: 30px; border-radius: 8px; max-width: 500px; width: 90%;">
-      <h2 style="margin-top: 0; color: #fff;">検索・置換</h2>
+  <div id="searchReplaceModal" class="modal-overlay">
+    <div class="modal-dialog">
+      <h2>検索・置換</h2>
 
       <div style="margin-bottom: 16px;">
-        <label style="display: block; color: #ccc; font-size: 14px; margin-bottom: 8px;">検索</label>
-        <input type="text" id="searchInput" placeholder="検索文字列" style="width: 100%; padding: 12px; background: #3c3c3c; border: 1px solid #555; color: #fff; border-radius: 4px; font-size: 14px;">
+        <label class="modal-label">検索</label>
+        <input type="text" id="searchInput" placeholder="検索文字列" class="modal-input">
       </div>
 
       <div style="margin-bottom: 16px;">
-        <label style="display: block; color: #ccc; font-size: 14px; margin-bottom: 8px;">置換</label>
-        <input type="text" id="replaceInput" placeholder="置換文字列" style="width: 100%; padding: 12px; background: #3c3c3c; border: 1px solid #555; color: #fff; border-radius: 4px; font-size: 14px;">
+        <label class="modal-label">置換</label>
+        <input type="text" id="replaceInput" placeholder="置換文字列" class="modal-input">
       </div>
 
       <div style="margin-bottom: 24px;">
@@ -457,14 +649,14 @@
   </div>
 
   <!-- 設定モーダル -->
-  <div id="settingsModal" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 1000; align-items: center; justify-content: center;">
-    <div style="background: #2d2d2d; padding: 30px; border-radius: 8px; max-width: 500px; width: 90%;">
-      <h2 style="margin-top: 0; color: #fff;">設定</h2>
+  <div id="settingsModal" class="modal-overlay">
+    <div class="modal-dialog">
+      <h2>設定</h2>
 
       <!-- API Key設定 -->
       <div style="margin-bottom: 24px;">
-        <label style="display: block; color: #ccc; font-size: 14px; margin-bottom: 8px;">OpenAI API Key</label>
-        <input type="password" id="apiKeyInput" placeholder="sk-..." style="width: 100%; padding: 12px; background: #3c3c3c; border: 1px solid #555; color: #fff; border-radius: 4px; font-size: 14px;">
+        <label class="modal-label">OpenAI API Key</label>
+        <input type="password" id="apiKeyInput" placeholder="sk-..." class="modal-input">
       </div>
 
 
