--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -674,6 +674,7 @@
     <button id="brConvertButton">改行変換</button>
     <button id="rubyConvertButton">ルビ変換</button>
     <button id="hiraganaButton">ひらがな変換</button>
+    <button id="wikipediaButton">Wikipedia</button>
     <button id="settingsButton">設定</button>
   </div>
 
